# representation-learning

./: .gitignore  README.md  pyproject.toml
notebook/: eda.ipynb
src/: __init__.py  data.py  model.py
src/represents/: bart.py  bert.py  gpt.py  lstm.py  t5.py  tfidf.py  word2vec.py
